--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+.input-inner-top-shadow {
+  box-shadow: inset 0 4px 8px -6px rgba(0,0,0,0.12);
+}
