--- a/frontend/src/app/components/driver/driver-dashboard/driver-dashboard.html
+++ b/frontend/src/app/components/driver/driver-dashboard/driver-dashboard.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-navbar [dashboardType]="'driver'"></app-navbar>
 
 <div class="min-h-screen bg-gray-100 p-6">
   <!-- Driver Info -->
