--- a/frontend/src/app/shared/layout/navbar/navbar.html
+++ b/frontend/src/app/shared/layout/navbar/navbar.html
@@ -1,12 +1,25 @@
 <nav class="w-full h-20 bg-white shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] flex items-center px-8 justify-between z-50 relative">
   <a routerLink="/" class="w-36 h-6 flex items-center text-rose-700 text-3xl font-bold font-['Inter'] cursor-pointer hover:text-rose-900 transition">SENDIT</a>
-  <div class="flex gap-8 items-center">
-    <a routerLink="/" class="w-20 h-6 flex items-center text-black text-xl font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">HOME</a>
-    <a routerLink="/about" class="w-24 h-6 flex items-center text-black text-base font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">ABOUT</a>
-    <a routerLink="/contact" class="w-24 h-6 flex items-center text-black text-base font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">CONTACT</a>
+  <div *ngIf="dashboardType" class="absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2 text-xl font-bold text-red-700 select-none pointer-events-none">
+    {{ dashboardType === 'admin' ? 'Admin Dashboard' : (dashboardType === 'driver' ? 'Driver Dashboard' : '') }}
+  </div>
+  <div *ngIf="!dashboardType" class="flex gap-8 items-center">
+    <a [routerLink]="'/'" class="w-20 h-6 flex items-center text-black text-xl font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">HOME</a>
+    <a href="#about-us" (click)="scrollToAbout($event)" class="w-24 h-6 flex items-center text-black text-base font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">ABOUT</a>
+    <a href="#contact-us" (click)="scrollToContact($event)" class="w-24 h-6 flex items-center text-black text-base font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">CONTACT</a>
     <a *ngIf="isLoggedIn" (click)="goToParcel()" class="w-28 h-6 flex items-center text-black text-base font-normal font-['Inter'] cursor-pointer hover:text-rose-700 transition">PARCELS</a>
+  </div>
+  <div class="flex gap-8 items-center">
     <div class="relative w-28 h-6 flex items-center text-black text-base font-normal font-['Inter'] cursor-pointer">
-      <span (click)="toggleAccountDropdown()" class="cursor-pointer hover:text-rose-700 transition">ACCOUNT</span>
+      <span (click)="toggleAccountDropdown()" class="cursor-pointer hover:text-rose-700 transition">
+        <ng-container *ngIf="isLoggedIn; else accountText">
+          <!-- Custom User SVG Icon -->
+          <span class="inline-flex items-center justify-center rounded-full border-2 border-gray-300 bg-white shadow h-12 w-12">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" xml:space="preserve" class="h-8 w-8" aria-label="User Account"><path fill="#111" stroke="#111" stroke-width="4" d="M135.832 140.848h-70.9c-2.9 0-5.6-1.6-7.4-4.5-1.4-2.3-1.4-5.7 0-8.6l4-8.2c2.8-5.6 9.7-9.1 14.9-9.5 1.7-.1 5.1-.8 8.5-1.6 2.5-.6 3.9-1 4.7-1.3-.2-.7-.6-1.5-1.1-2.2-6-4.7-9.6-12.6-9.6-21.1 0-14 9.6-25.3 21.5-25.3s21.5 11.4 21.5 25.3c0 8.5-3.6 16.4-9.6 21.1-.5.7-.9 1.4-1.1 2.1.8.3 2.2.7 4.6 1.3 3 .7 6.6 1.3 8.4 1.5 5.3.5 12.1 3.8 14.9 9.4l3.9 7.9c1.5 3 1.5 6.8 0 9.1-1.6 2.9-4.4 4.6-7.2 4.6zm-35.4-78.2c-9.7 0-17.5 9.6-17.5 21.3 0 7.4 3.1 14.1 8.2 18.1.1.1.3.2.4.4 1.4 1.8 2.2 3.8 2.2 5.9 0 .6-.2 1.2-.7 1.6-.4.3-1.4 1.2-7.2 2.6-2.7.6-6.8 1.4-9.1 1.6-4.1.4-9.6 3.2-11.6 7.3l-3.9 8.2c-.8 1.7-.9 3.7-.2 4.8.8 1.3 2.3 2.6 4 2.6h70.9c1.7 0 3.2-1.3 4-2.6.6-1 .7-3.4-.2-5.2l-3.9-7.9c-2-4-7.5-6.8-11.6-7.2-2-.2-5.8-.8-9-1.6-5.8-1.4-6.8-2.3-7.2-2.5-.4-.4-.7-1-.7-1.6 0-2.1.8-4.1 2.2-5.9.1-.1.2-.3.4-.4 5.1-3.9 8.2-10.7 8.2-18-.2-11.9-8-21.5-17.7-21.5z"/></svg>
+          </span>
+        </ng-container>
+        <ng-template #accountText>ACCOUNT</ng-template>
+      </span>
       <div *ngIf="accountDropdownOpen" class="absolute top-full left-0 mt-2 w-40 bg-white border border-gray-200 rounded shadow-lg z-10">
         <ng-container *ngIf="isLoggedIn; else guestLinks">
           <a (click)="goToProfile()" class="block px-4 py-2 hover:bg-gray-100 cursor-pointer transition">Profile</a>
