--- a/frontend/src/app/components/auth/register/register.html
+++ b/frontend/src/app/components/auth/register/register.html
@@ -32,7 +32,8 @@
             class="w-full px-4 py-3 border border-gray-300 rounded outline-none focus:ring-2 focus:ring-[#BA0C2F] text-gray-900 bg-white input-inner-top-shadow">
         </div>
         <div>
-          <input [(ngModel)]="confirmPassword" name="confirmPassword" type="password" required placeholder="Confirm Password"
+          <input [(ngModel)]="confirmPassword" name="confirmPassword" type="password" required
+            placeholder="Confirm Password"
             class="w-full px-4 py-3 border border-gray-300 rounded outline-none focus:ring-2 focus:ring-[#BA0C2F] text-gray-900 bg-white input-inner-top-shadow">
         </div>
         <button type="submit" [disabled]="isLoading"
